# LearnPath

./: .gitignore  DEPLOYMENT_GUIDE.md  FINAL_INTEGRATION_SUMMARY.md  README.md  SYSTEM_DOCUMENTATION.md  check_system.py  demo_training_pipeline.py  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  jwt_debug.py  package.json  setup_env.py  supabase_setup.sql  test_auth_context.html  test_backend.py  test_jwt_debug.py  test_simple_training.py  test_training_basic.py  vite.config.ts
backend/: .env.example  .env.production  .env.template  .env.test  .gitignore  ADDITIONAL_PLATFORMS_IMPLEMENTATION_SUMMARY.md  DASHBOARD_IMPLEMENTATION_SUMMARY.md  Dockerfile  Dockerfile.production  LEARNING_PATH_IMPLEMENTATION_SUMMARY.md  PIPELINE_AUTOMATION_IMPLEMENTATION_SUMMARY.md  README.md  SECURITY_PRIVACY_IMPLEMENTATION_SUMMARY.md  advanced_career_analysis_demo.py  ai_career_dev.db  alembic.ini  fix_dependencies.bat  init_auth_db.py  init_db.py  init_postgres_db.py  main_minimal.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  start_server.py  test_analysis_integration.py  test_db.sqlite  test_gemini_career_analysis.py  test_profile.py  test_profile_api_simple.py  test_redis.py  test_report.md  test_ux_designer_recommendations.py
backend/alembic/: env.py
backend/app/: __init__.py  main.py
backend/config/: pipeline_automation.yaml
backend/docs/: career_analysis_endpoint.md  job_recommendations_implementation.md
backend/examples/: additional_platforms_demo.py  ai_analysis_demo.py  analytics_api_demo.py  analytics_demo.py  career_trajectory_demo.py  dashboard_demo.py  (+22 more)
(+430 files in other folders)
